[package]
name = "dqlite_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
libc = "0.2"
parking_lot = "0.12.5"
rusqlite = "0.37.0"
serde = "1.0.228"
serde_yaml = "0.9.34"
tokio = "1.48.0"

[build-dependencies]
bindgen = "0.71.0"
pkg-config = "0.3"
cc = "1"
